Update example for gradle-jextract version 0.4.0 and JDK 20